# mintvue-app

./: README.md
backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/app/models/: __init__.py  content.py  event.py  like.py  nft.py  ticket.py  transaction.py  user.py
backend/app/routers/: auth.py  content.py  event.py  mint.py  user.py
backend/app/service/: auth.py  content.py  event.py  feed.py  mintService.py  s3.py  user.py
backend/core/: config.py  email.py  logger.py  middleware.py  redis.py  security.py  session.py
backend/templates/emails/: welcome.html
frontend/mintvue/: middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
frontend/mintvue/app/: globals.css  layout.tsx  page.tsx
frontend/mintvue/app/auth/: page.tsx
frontend/mintvue/app/user/: layout.tsx
frontend/mintvue/components/auth/: auth-card.tsx  auth-form.tsx  social-auth.tsx
frontend/mintvue/components/dashboard/: dashboard-header.tsx  floating-upload.tsx  mobile-sidebar-trigger.tsx  sidebar.tsx
frontend/mintvue/components/feed/: feed-navigation.tsx  video-actions.tsx  video-card.tsx  video-feed.tsx
frontend/mintvue/components/layout/: footer.tsx  header.tsx
frontend/mintvue/components/marketing/: events-section.tsx  feed-preview.tsx  final-cta.tsx  hero-section.tsx  how-it-works.tsx  preview-section.tsx  trusted-by.tsx
frontend/mintvue/components/ui/: container.tsx
frontend/mintvue/components/upload/: upload-modal.tsx
frontend/mintvue/hooks/: use-notifications.ts
frontend/mintvue/lib/: api.ts
(+3 files in other folders)
